# gvd_server/routers/image_router.go
@@ -1,0 +1,11 @@
+package routers
+
+import (
+	"gvd_server/api"
+	"gvd_server/middleware"
+)
+
+func (router RouterGroup) ImageRouter() {
+	app := api.App.ImageApi
+	router.POST("image", middleware.JwtAuth(), app.ImageUploadView) //上传图片
+}
